--- a/spring-boot-2.1.0.RELEASE-master/spring-boot-project/spring-boot-yanjiu/src/main/resource/application.properties
+++ b/spring-boot-2.1.0.RELEASE-master/spring-boot-project/spring-boot-yanjiu/src/main/resource/application.properties
@@ -1,1 +1,17 @@
 spring.output.ansi.enabled=NEVER
+server.port=8888
+
+com.didispace.foo=bar
+#推荐使用全小写配合-分割符的方式来配置
+com.didispace.database-platform=sql
+#使用[]来定位列表类型
+#也支持逗号分隔方式，两种方式等价
+#com.didispace.post=Why Spring Boot,Why Spring Cloud
+ 
+com.didispace.post[0]=Why Spring Boot
+com.didispace.post[1]=Why Spring Cloud
+#Map类型的定义格式如下
+com.didispace.posts[0].title=Why Spring Boot
+com.didispace.posts[0].content=It is perfect!
+com.didispace.posts[1].title=Why Spring Cloud
+com.didispace.posts[1].content=It is perfect too!
