--- a/spring-boot-2.1.0.RELEASE-master/spring-boot-project/spring-boot-yanjiu/pom.xml
+++ b/spring-boot-2.1.0.RELEASE-master/spring-boot-project/spring-boot-yanjiu/pom.xml
@@ -27,7 +27,7 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.8.1</version>
-			 
+
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -110,21 +110,14 @@
 			<scope>provided</scope>
 		</dependency>
 
-<!-- 		  <dependency>
-			<groupId>org.apache.tomcat.embed</groupId>
-			<artifactId>tomcat-embed-core</artifactId>
-			<version>8.5.5</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.tomcat.embed</groupId>
-			<artifactId>tomcat-embed-el</artifactId>
-			<version>8.5.5</version>
-		</dependency> -->
+		<!-- <dependency> <groupId>org.apache.tomcat.embed</groupId> <artifactId>tomcat-embed-core</artifactId> 
+			<version>8.5.5</version> </dependency> <dependency> <groupId>org.apache.tomcat.embed</groupId> 
+			<artifactId>tomcat-embed-el</artifactId> <version>8.5.5</version> </dependency> -->
 		<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
 			<artifactId>tomcat-embed-jasper</artifactId>
-		    <version>9.0.12</version>
-		</dependency>  
+			<version>9.0.12</version>
+		</dependency>
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
@@ -217,6 +210,12 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
 			<version>5.1.0.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.5</version>
+			<optional>true</optional>
 		</dependency>
 	</dependencies>
 
