增加自动装配

--- a/spring-boot-2.1.0.RELEASE-master/spring-boot-project/spring-boot-yanjiu/src/main/resource/application.properties
+++ b/spring-boot-2.1.0.RELEASE-master/spring-boot-project/spring-boot-yanjiu/src/main/resource/application.properties
@@ -15,3 +15,5 @@ com.didispace.posts[0].title=Why Spring Boot
 com.didispace.posts[0].content=It is perfect!
 com.didispace.posts[1].title=Why Spring Cloud
 com.didispace.posts[1].content=It is perfect too!
+server.port=9092
+spring.profiles.active=pro
