--- a/spring-boot-2.1.0.RELEASE-master/spring-boot-project/spring-boot-yanjiu/src/main/resource/application.properties
+++ b/spring-boot-2.1.0.RELEASE-master/spring-boot-project/spring-boot-yanjiu/src/main/resource/application.properties
@@ -17,3 +17,5 @@ com.didispace.posts[1].title=Why Spring Cloud
 com.didispace.posts[1].content=It is perfect too!
 server.port=9092
 spring.profiles.active=pro
+spring.application.name=nacos-test
+spring.cloud.nacos.discovery.server-addr=66.10.111.33:8848
