--- a/spring-boot-2.1.0.RELEASE-master/spring-boot-project/pom.xml
+++ b/spring-boot-2.1.0.RELEASE-master/spring-boot-project/pom.xml
@@ -29,5 +29,6 @@
 		<module>spring-boot-cli</module>
 		<module>spring-boot-docs</module>
         <module>spring-boot-yanjiu</module>
+        <module>spring-cloud-component</module>
   </modules>
 </project>
