--- a/spring-boot-2.1.0.RELEASE-master/spring-boot-project/spring-cloud-component/nacos-spring-cloud-provider-example/pom.xml
+++ b/spring-boot-2.1.0.RELEASE-master/spring-boot-project/spring-cloud-component/nacos-spring-cloud-provider-example/pom.xml
@@ -12,9 +12,14 @@
 	<artifactId>nacos-spring-cloud-provider-example</artifactId>
 
 	<dependencies>
+
 		<dependency>
 			<groupId>com.alibaba.cloud</groupId>
 			<artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba.cloud</groupId>
+			<artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
