--- a/spring-boot-2.1.0.RELEASE-master/spring-boot-project/spring-cloud-component/nacos-spring-cloud-provider-example/src/main/resources/application.properties
+++ b/spring-boot-2.1.0.RELEASE-master/spring-boot-project/spring-cloud-component/nacos-spring-cloud-provider-example/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=8070
 spring.application.name=service-provider
 spring.cloud.nacos.discovery.server-addr=66.10.111.33:8848
+#spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
