--- a/spring-boot-2.1.0.RELEASE-master/spring-boot-project/spring-cloud-component/pom.xml
+++ b/spring-boot-2.1.0.RELEASE-master/spring-boot-project/spring-cloud-component/pom.xml
@@ -23,16 +23,18 @@
 	</modules>
 	<dependencyManagement>
 		<dependencies>
-
 			<dependency>
 				<groupId>com.alibaba.cloud</groupId>
 				<artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
 				<version>2.1.1.RELEASE</version>
 			</dependency>
-
+			<dependency>
+				<groupId>com.alibaba.cloud</groupId>
+				<artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+				<version>2.1.1.RELEASE</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
-
 	<build>
 
 	</build>
