--- a/spring-boot-2.1.0.RELEASE-master/spring-boot-project/spring-boot-yanjiu/pom.xml
+++ b/spring-boot-2.1.0.RELEASE-master/spring-boot-project/spring-boot-yanjiu/pom.xml
@@ -258,6 +258,11 @@
 			<version>20.0</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+			<version>2.2.3.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
