--- a/spring-boot-2.1.0.RELEASE-master/spring-boot-project/spring-cloud-component/feign-spring-cloud-demo/src/main/resouce/application.properties
+++ b/spring-boot-2.1.0.RELEASE-master/spring-boot-project/spring-cloud-component/feign-spring-cloud-demo/src/main/resouce/application.properties
@@ -1,3 +1,3 @@
 server.port=8080
-spring.application.name=service-consumer
+spring.application.name=service-feign
 spring.cloud.nacos.discovery.server-addr=66.252.64.17:8848
