--- a/spring-boot-2.1.0.RELEASE-master/spring-boot-project/pom.xml
+++ b/spring-boot-2.1.0.RELEASE-master/spring-boot-project/pom.xml
@@ -30,5 +30,6 @@
 		<module>spring-boot-docs</module>
         <module>spring-boot-yanjiu</module>
         <module>spring-cloud-component</module>
+        <module>spring-study-project</module>
   </modules>
 </project>
