--- a/spring-boot-2.1.0.RELEASE-master/spring-boot-project/spring-cloud-component/nacos-spring-cloud-provider-example/pom.xml
+++ b/spring-boot-2.1.0.RELEASE-master/spring-boot-project/spring-cloud-component/nacos-spring-cloud-provider-example/pom.xml
@@ -25,6 +25,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.8.2</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
