--- a/spring-boot-2.1.0.RELEASE-master/spring-boot-project/spring-boot-yanjiu/pom.xml
+++ b/spring-boot-2.1.0.RELEASE-master/spring-boot-project/spring-boot-yanjiu/pom.xml
@@ -263,6 +263,11 @@
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 			<version>2.2.3.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>com.netflix.servo</groupId>
+			<artifactId>servo-core</artifactId>
+			<version>0.10.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
