--- a/spring-boot-2.1.0.RELEASE-master/spring-boot-project/spring-boot-yanjiu/pom.xml
+++ b/spring-boot-2.1.0.RELEASE-master/spring-boot-project/spring-boot-yanjiu/pom.xml
@@ -230,6 +230,12 @@
 			<groupId>com.alibaba.cloud</groupId>
 			<artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
 			<version>2.1.1.RELEASE</version>
+			<exclusions>
+				<exclusion>
+					<groupId>com.netflix.hystrix</groupId>
+					<artifactId>hystrix-core</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.retry</groupId>
@@ -278,13 +284,11 @@
 			<artifactId>jersey-client</artifactId>
 			<version>1.19.4</version>
 		</dependency>
-				<dependency>
+		<dependency>
 			<groupId>com.sun.jersey.contribs</groupId>
 			<artifactId>jersey-apache-client4</artifactId>
 			<version>1.19.1</version>
 		</dependency>
-	
-		
 	</dependencies>
 
 	<build>
