--- a/spring-boot-2.1.0.RELEASE-master/spring-boot-project/spring-study-project/pom.xml
+++ b/spring-boot-2.1.0.RELEASE-master/spring-boot-project/spring-study-project/pom.xml
@@ -95,6 +95,11 @@
 			<artifactId>jibx-tools</artifactId>
 			<version>1.2.5</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+			<version>${revision}</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
